[package]
name = "alfred-confluence-workflow"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.56"
html-escape = "0.2.11"
unicode-normalization = "0.1.19"
